# windows-screensavers-manager

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  COPYRIGHT.md  Cargo.toml  LICENSE.md  PRIVACY.md  README.md  SUPPORT.md  build.rs  registry.json
.github/workflows/: build-linux-binary.yml  build-package-apk.yml  build-package-appimage.yml  build-package-aur.yml  build-package-deb.yml  build-package-flatpak.yml  build-package-msi.yml  build-package-nix.yml  build-package-rpm.yml  build-package-winget.yml  build-windows-binary.yml  ci.yml
packaging/apk/: APKBUILD  build-alpine-apk.sh
packaging/appimage/: AppRun  appimage-builder.yml  build-appimage.sh
packaging/aur/: PKGBUILD  build-arch-aur.sh
packaging/completions/: generate-completions.sh
packaging/deb/: build-debian-package.sh
packaging/deb/debian/: control  postinst  prerm
packaging/desktop/: ridle.desktop
packaging/flatpak/: build-flatpak.sh  org.local76.ridle.yaml
packaging/nix/: build-nix-flake.sh  default.nix
packaging/rpm/: build-redhat-rpm.sh  ridle.spec
packaging/winget/: publish-to-winget.ps1  winget.yaml
packaging/wix/: build-windows-msi.ps1  main.wxs
src/: app.rs  config.rs  downloader.rs  main.rs  saver_win32.rs  theme.rs  ui.rs  win32.rs
src/app/: actions.rs  keys.rs  markdown.rs  mod.rs
src/backend/: mod.rs
src/backend/downloader/: mod.rs
src/backend/saver/: win32.rs
src/ui/: mod.rs  text_format.rs  widgets.rs
web/: index.html
