[package]
name = "trance"
version = "2026.6.11"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Windows screensaver manager"

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["termwiz"] }
crossterm = "0.28"
sysinfo = "0.30"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
library = { path = "../library", features = ["widgets", "sys-info", "window", "clipboard", "notification", "event-log", "scenes", "chrome"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Power",
    "Win32_System_Shutdown",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_System_Threading",
]}
windows = { version = "0.52.0", features = [
    "Data_Xml_Dom",
    "UI_Notifications",
] }

[build-dependencies]
embed-resource = "2"

[package.metadata.deb]
maintainer = "Jeryd <jerydleuck@gmail.com>"
assets = [
    ["target/release/trance", "usr/bin/trance", "755"],
    ["assets/brand/app_icon.png", "usr/share/pixmaps/trance.png", "644"],
    ["packaging/desktop/trance.desktop", "usr/share/applications/trance.desktop", "644"],
]


